fixed confirmation overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,11 @@ main {
 }
 
 .confirmation-container {
-    height: 90%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .confirmation-container .flex svg {
@@ -209,6 +213,7 @@ main {
 }
 
 footer {
+    width: 100%;
     margin-top: 2rem;
     display: flex;
     justify-content: space-between;
